--- a/_nodes/0020.md
+++ b/_nodes/0020.md
@@ -1,9 +1,9 @@
 ---
-title: Opcartesian fibrations
+title: Cocartesian fibrations
 macrolib: topos
 ---
 
-Opcartesian fibrations are a dual notion to cartesian fibrations, in which the
+Cocartesian fibrations are a dual notion to cartesian fibrations, in which the
 variance of indexing is reversed.
 
 @include{0021}
