--- a/_nodes/0021.md
+++ b/_nodes/0021.md
@@ -1,10 +1,10 @@
 ---
-title: Opcartesian morphisms
+title: Cocartesian morphisms
 macrolib: topos
 ---
 
 Let $E$ be displayed over $B$, and let $f:x\to y \in B$; a morphism
-$\bar{f}:\bar{x}\to\Sub{f} \bar{y}$ in $E$ is called *opcartesian* over $f$ when for
+$\bar{f}:\bar{x}\to\Sub{f} \bar{y}$ in $E$ is called *cocartesian* over $f$ when for
 any $m:y\to u$ and $\bar{h}:\bar{x}\to\Sub{f;m} \bar{u}$ there exists a unique
 $\bar{m} : \bar{y}\to\Sub{m} \bar{u}$ with $\bar{f};\bar{m} = \bar{h}$:
 «
@@ -29,5 +29,3 @@ $\bar{m} : \bar{y}\to\Sub{m} \bar{u}$ with $\bar{f};\bar{m} = \bar{h}$:
     \draw[->,exists] (ne) to node [desc] {$\bar{m}$} (u');
   \end{tikzpicture}
 »
-
-**Remark.** These are also known as *cocartesian* morphisms.
