--- a/_nodes/0022.md
+++ b/_nodes/0022.md
@@ -1,8 +1,10 @@
 ---
-title: The definition of opcartesian fibrations
+title: The definition of cocartesian fibrations
 macrolib: topos
 ---
 
-A displayed category $E$ over $B$ is an *opcartesian fibration* when for each
+A displayed category $E$ over $B$ is a *cocartesian fibration* when for each
 $f : x \to y\in B$ and $\bar{x}\in E\Sub{x}$, there exists a displayed object
-$\bar{y}\in E\Sub{y}$ and an *opcartesian* morphism $\bar{f} : \bar{x}\to\Sub{f} \bar{y}$.
+$\bar{y}\in E\Sub{y}$ and a *cocartesian* morphism $\bar{f} : \bar{x}\to\Sub{f} \bar{y}$.
+
+**Remark.** These are also known as *opfibrations*.
