--- a/_nodes/0023.md
+++ b/_nodes/0023.md
@@ -16,8 +16,8 @@ displayed category over $B$.
 
 **Exercise.** Let $E$ be displayed over $B$, and let $f:x\to y\in B$. Prove that a
 morphism $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$ is cartesian over $f$ in $E$ if and only
-if $\bar{f}:\bar{y}\to\Sub{f}\bar{x}$ is opcartesian over $f$ in $\OpFib{E}$.
+if $\bar{f}:\bar{y}\to\Sub{f}\bar{x}$ is cocartesian over $f$ in $\OpFib{E}$.
 
 **Exercise.** Prove that a displayed category $E$ is a cartesian fibration over $B$
-if and only if $\OpFib{E}$ is an opcartesian fibration over $\OpCat{B}$.
+if and only if $\OpFib{E}$ is a cocartesian fibration over $\OpCat{B}$.
 
