pushouts as northeastern pullbacks

--- a/_nodes/0021.md
+++ b/_nodes/0021.md
@@ -20,6 +20,7 @@ $\bar{m} : \bar{y}\to\Sub{m} \bar{u}$ with $\bar{f};\bar{m} = \bar{h}$:
       north = \bar{f},
       south = f,
       se = y,
+      ne/style = ne pullback,
     }
     \node (u') [above right = 1.5cm of ne,xshift=.5cm] {$\bar{u}$};
     \node (u) [above right = 1.5cm of se,xshift=.5cm] {$u$};
@@ -29,3 +30,6 @@ $\bar{m} : \bar{y}\to\Sub{m} \bar{u}$ with $\bar{f};\bar{m} = \bar{h}$:
     \draw[->,exists] (ne) to node [desc] {$\bar{m}$} (u');
   \end{tikzpicture}
 »
+
+We use a "pushout corner" to indicate $\bar{x}\to\bar{y}$ as a cocartesian morphism,
+a notation justified by {%ref 0024 %}.
