--- a/_nodes/0024.md
+++ b/_nodes/0024.md
@@ -27,7 +27,7 @@ $\overline{B}$ over $B$ as follows:
   }
 »
 
-**Exercise.** Prove that $\overline{B}$ is an cocartesian fibration if and only if
+**Exercise.** Prove that $\overline{B}$ is a cocartesian fibration if and only if
 $B$ has pushouts.
 
 **Exercise.** Prove that the total category {%ref 000A%} of $\overline{B}$ is the
