--- a/_nodes/0023.md
+++ b/_nodes/0023.md
@@ -1,23 +1,28 @@
 ---
-title: Opposite fibrations
+title: The total opposite of a displayed category
 macrolib: topos
 ---
 
 **Construction.**
-Let $E$ be displayed over $B$; we may define $\OpFib{E}$ displayed over $\OpCat{B}$ as follows:
+Let $E$ be displayed over $B$; we define its *total opposite* $\TotOpCat{E}$
+displayed over $\OpCat{B}$ as follows:
 
-1. An object of $\OpFib{E}\Sub{x}$ is given by an object of $E\Sub{x}$.
+1. An object of $\TotOpCat{E}\Sub{x}$ is given by an object of $E\Sub{x}$.
 
-2. Given $f : x \to y\in \OpCat{B}$, a displayed morphism $\bar{x}\to\Sub{f} \bar{y}$ in $\OpFib{E}$
+2. Given $f : x \to y\in \OpCat{B}$, a displayed morphism $\bar{x}\to\Sub{f} \bar{y}$ in $\TotOpCat{E}$
    is given by a displayed morphism $\bar{y}\to\Sub{f} \bar{x}$ in $E$.
 
 **Warning.** Do not confuse this construction with {%ref 000Q %}, which produces a
 displayed category over $B$.
 
+**Exercise.** Let $E$ be displayed over $B$. Prove that the total category {%ref 000A %}
+$\TotCat{\TotOpCat{E}}$ is $\OpCat{\prn{\TotCat{E}}}$, and its projection functor is
+$\OpCat{\prn{p\Sub{E}}} : \OpCat{\TotCat{E}}\to\OpCat{B}$.
+
 **Exercise.** Let $E$ be displayed over $B$, and let $f:x\to y\in B$. Prove that a
 morphism $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$ is cartesian over $f$ in $E$ if and only
-if $\bar{f}:\bar{y}\to\Sub{f}\bar{x}$ is cocartesian over $f$ in $\OpFib{E}$.
+if $\bar{f}:\bar{y}\to\Sub{f}\bar{x}$ is cocartesian over $f$ in $\TotOpCat{E}$.
 
 **Exercise.** Prove that a displayed category $E$ is a cartesian fibration over $B$
-if and only if $\OpFib{E}$ is a cocartesian fibration over $\OpCat{B}$.
+if and only if $\TotOpCat{E}$ is a cocartesian fibration over $\OpCat{B}$.
 
