--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -7,14 +7,13 @@
 \newcommand\FAM[1]{\boldsymbol{\mathcal{F}}_{#1}}
 \newcommand\FullSubfib[1]{\mathbf{Full}(#1)}
 \newcommand\GL[1]{\boldsymbol{\mathcal{G}}_{#1}}
-\newcommand\gl[1]{\langle #1 \rangle}
 \newcommand\Gl[1]{\mathsf{gl}_{#1}}
+\newcommand\gl[1]{\langle #1 \rangle}
 \newcommand\Idn[1]{1_{#1}}
 \newcommand\InvImg[1]{#1^{*}}
 \newcommand\OpCat[1]{#1^{\mathsf{o}}}
-\newcommand\OpFib[1]{#1^{\mathsf{op}}}
-\newcommand\OpGl[1]{\overline{\mathsf{gl}}_{#1}}
 \newcommand\OpGL[1]{\overline{\boldsymbol{\mathcal{G}}}_{#1}}
+\newcommand\OpGl[1]{\overline{\mathsf{gl}}_{#1}}
 \newcommand\prn[1]{(#1)}
 \newcommand\SelfIx[1]{\underline{#1}}
 \newcommand\SET{\mathbf{Set}}
@@ -24,3 +23,4 @@
 \newcommand\Sup[1]{^{#1}}
 \newcommand\TOP[1]{\mathbf{Top}_{#1}}
 \newcommand\TotCat[1]{\widetilde{#1}}
+\newcommand\TotOpCat[1]{#1^{\tilde{\mathsf{o}}}}
