merge: move the 0015 => 001A to fix conflict with 'main' branch

--- a/_nodes/000O.md
+++ b/_nodes/000O.md
@@ -8,4 +8,4 @@ theory](http://ncatlab.org/nlab/show/essentially+algebraic+theory). As such it i
 possible to compute *models* of this theory in any category that has finite
 limits.
 
-@include{0015}
+@include{001A}
