split a bunch of nodes into result nodes

--- a/_nodes/000J.md
+++ b/_nodes/000J.md
@@ -10,7 +10,7 @@ when we generalize them to fibrations. The latter is called *local smallness*
 and is discussed and defined in {%ref 000F%}; the former is called *global
 smallness* by Jacobs {%cite jacobs:1999 -A%} and factors through an important concept: the *generic object*.
 
-**Definition.** An ordinary category is called *globally small* when it has a set of objects.
+@include{001D}
 
 @include{000K}
 
