--- a/_nodes/000L.md
+++ b/_nodes/000L.md
@@ -1,9 +1,10 @@
 ---
 title: Globally small categories
 macrolib: topos
+taxon: theorem
 ---
 
-**Theorem.** An ordinary category $C$ is equivalent to a globally small category if and only if the fibration $\FAM{C}$ has a generic object.
+An ordinary category $C$ is equivalent to a globally small category if and only if the fibration $\FAM{C}$ has a generic object.
 
 **Proof.**
 To see that this is the case, suppose that $C$ has a set of objects. Then
