--- a/_nodes/000R.md
+++ b/_nodes/000R.md
@@ -3,21 +3,9 @@ title: Foundational assumptions
 macrolib: topos
 ---
 
-**Definition.** A *meta-category* $\mathfrak{C}$ is defined by explaining what
-an object of $\mathfrak{E}$ is, and, given two objects $x,y\in \mathfrak{E}$,
-what a morphism from $x$ to $y$ is, together with the following operations:
+@include{001F}
 
-1. for each object $x\in \mathfrak{E}$, an *identity* map $\Idn{x} : x \to x$,
-2. for any two maps $f:x\to y$ and $g:y\to z$, a *composite map* $f;g : x \to z$,
-3. such that the following equations hold:
-\\[
-  \Idn{x};h = h\qquad
-  h;\Idn{y} = h\qquad
-  f;(g;h) = (f;g);{h}
-\\]
-
-
-In our explanation above, we have not imposed any restrictions on what kinds of
+In our definition above, we have not imposed any restrictions on what kinds of
 things the objects and morphisms are; our definition is pre-mathematical, so we
 do not assume beforehand that there is a such thing as a collection of "all"
 meta-categories.
@@ -30,10 +18,7 @@ well-defined; the notion is entirely schematic.
 **Assumption.** We assume a meta-category $\BoldSymbol{\mathfrak{Coll}}$ whose
 objects we will refer to as "collections". We assume that the meta-category of all collections satisfies the axioms of Lawvere's [ETCS](http://ncatlab.org/nlab/show/ETCS).
 
-**Definition.** A *category* $E$ is defined to be a meta-category whose objects
-are defined to be the elements of some collection, and for any two objects
-$x,y\in E$ the morphisms $x\to y$ are defined to be the elements of some
-collection.
+@include{001G}
 
 Consequently there exists a meta-category $\BoldSymbol{\mathfrak{Cat}}$ of all
 categories. Following [Lawvere](http://rfcwalters.blogspot.com/2010/10/old-post-why-are-we-concerned-fw.html) (but deviating from some other authors that
