--- a/_nodes/000P.md
+++ b/_nodes/000P.md
@@ -1,6 +1,6 @@
 ---
-title: The definition of global smallness
 macrolib: topos
+taxon: definition
 ---
 
-**Definition.** A cartesian fibration $E$ over $B$ is called *globally small* when it has a generic object {%ref 000K%}.
+A cartesian fibration $E$ over $B$ is called *globally small* when it has a generic object {%ref 000K%}.
