split a lot more nodes

--- a/_nodes/0000.md
+++ b/_nodes/0000.md
@@ -1,6 +1,7 @@
 ---
-title: Displayed categories
+title: Displayed category
 macrolib: topos
+taxon: definition
 ---
 
 Let $B$ be a category. A *displayed category* $E$ over $B$ is defined by the
@@ -24,6 +25,5 @@ following data {%cite ahrens-lumsdaine:2019%}:
   \\]
 Note that these are well-defined because of the corresponding
 laws for the base category $B$.
-
 
 **Notation**. When we have too many subscripts, we will write $E[x]$ instead of $E\Sub{x}$.
