--- a/_nodes/0001.md
+++ b/_nodes/0001.md
@@ -1,6 +1,7 @@
 ---
 title: Cartesian morphisms
 macrolib: topos
+taxon: definition
 ---
 
 Let $E$ be displayed over $B$, and let $f:x\to y \in B$; a morphism
