--- a/_nodes/0002.md
+++ b/_nodes/0002.md
@@ -1,6 +1,7 @@
 ---
-title: Cartesian fibrations
+title: Cartesian fibration
 macrolib: topos
+taxon: definition
 ---
 
 A displayed category $E$ over $B$ is said to be a *cartesian fibration*, when
