--- a/_nodes/000B.md
+++ b/_nodes/000B.md
@@ -44,17 +44,13 @@ equivalence with the naïve one in all cases that the latter is meaningful.
 \end{tikzpicture}
 »
 
-**Exercise.** Suppose that $B$ is an internal category in $\mathbf{Set}$, i.e.
-it has a set of objects. Exhibit an equivalence of displayed categories between
-$P\Sub{\bullet}$ as described above, and the naïve definition which $E\Sub{x}$ is the
-collection of objects $u\in E$ such that $Pu = x$.
-
+@include{001U}
 
 We have a functor $\TotCat{P\Sub{\bullet}}\to E$ taking a pair $(x,(u,\phi\Sub{u}))$ to
 $u$.
 
-**Exercise.** Explicitly construct the functorial action of $\TotCat{P\Sub{\bullet}}\to E$.
+@include{001V}
+@include{001W}
 
-**Exercise.** Verify that $\TotCat{P\Sub{\bullet}}\to E$ is a categorical equivalence.
 
 @include{000C}
