--- a/_nodes/000N.md
+++ b/_nodes/000N.md
@@ -8,8 +8,7 @@ categories* (categories defined in the internal language of a category $B$) and
 cartesian fibrations over $B$, generalizing the relationship between categories internal
 to $\SET$ (i.e. small categories) and their family fibrations over $\SET$.
 
-**Definition.** A cartesian fibration is called *small* when it is both locally small
-{%ref 000I%} and globally small {%ref 000J%}.
+@include{001Q}
 
 We have already seen in {%ref 000G%} and {%ref 000L%} that smallness in the
 sense of the definition above appropriately generalizes the ordinary notion of
