--- a/_nodes/000X.md
+++ b/_nodes/000X.md
@@ -1,8 +1,11 @@
 ---
-title: The externalization is globally small
 macrolib: topos
+taxon: lemma
 ---
 
+The externalization {%ref 000V%} is globally small
+
+**Proof.**
 We may choose a generic object {%ref 000K%} for $\brk{C}$, namely the identity element $(C\Sub{0},\Idn{C\Sub{0}})\in \TotCat{\brk{C}}$. Given any object $(x,u)\in \TotCat{\brk{C}}$ the cartesian map $(x,u)\to (C\Sub{0},\Idn{C\Sub{0}})$ is given as follows:
 «
 \begin{tikzpicture}[diagram]
