--- a/_nodes/000Y.md
+++ b/_nodes/000Y.md
@@ -1,8 +1,11 @@
 ---
-title: The externalization is locally small
 macrolib: topos
+taxon: lemma
 ---
 
+The externalization {%ref 000V%} is locally small
+
+**Proof.**
 Fix $x\in E$ and $u,v\in
 \brk{C}\Sub{x}$, we must exhibit a terminal object to the (total) category
 $\TotCat{\CandHom{x}{u}{v}}$ of "hom candidates" defined in {%ref 000I%}.
