--- a/_nodes/0010.md
+++ b/_nodes/0010.md
@@ -1,6 +1,7 @@
 ---
 title: The full subfibration associated to a displayed object
 macrolib: topos
+taxon: construction
 ---
 
 Let $E$ be a locally small category fibered
