--- a/_nodes/0019.md
+++ b/_nodes/0019.md
@@ -27,8 +27,5 @@ $\overline{B}$ over $B$ as follows:
   }
 »
 
-**Exercise.** Prove that $\overline{B}$ is a cocartesian fibration if and only if
-$B$ has pushouts.
-
-**Exercise.** Prove that the total category {%ref 000A%} of $\overline{B}$ is the
-arrow category $B^{\to}$, and the projection is the *domain* functor.
+@include{001M}
+@include{001N}
