--- a/_nodes/0003.md
+++ b/_nodes/0003.md
@@ -1,30 +1,7 @@
 ---
-title: "Example: the canonical-self-indexing"
+title: The canonical self-indexing
 macrolib: topos
 ---
 
-Let $B$ be an ordinary category; there is a canonical displayed category
-$\SelfIx{B}$ over $B$ given fiberwise by the *slices* of $B$.
-1. For $x\in B$, we define $\SelfIx{B}\Sub{x}$ to be the collection $\Sl{B}{x}$
-   of pairs $(\bar{x}\in B,p\Sub{x}:\bar{x}\to x)$.
-2. For $f : x\to y\in B$, we define $\SelfIx{B}\Sub{f}$ to be the collection of
-   commuting squares in the following configuration:
-«
-  \DiagramSquare{
-    height = 1.7cm,
-    nw = \bar{x},
-    ne = \bar{y},
-    sw = x,
-    se = y,
-    west = p\Sub{x},
-    east = p\Sub{y},
-    south = f,
-    north = \bar{f},
-    west/style = {->,exists},
-    east/style = {->,exists},
-    north/style = {->,exists},
-  }
-»
-
-**Exercise.** Prove that $\SelfIx{B}$ is a cartesian fibration if and only if $B$ has pullbacks.
-
+@include{001X}
+@include{001Y}
