--- a/_nodes/000A.md
+++ b/_nodes/000A.md
@@ -14,5 +14,5 @@ B$; in this case $\TotCat{E}$ is called the *total category* of $E$.
 
 The construction of the total category of a displayed category is called the *Grothendieck construction.*
 
-**Exercise.** Prove that the total category $\TotCat{\SelfIx{B}}$ of the canonical self-indexing {%ref 0003%} is the arrow category $B^{\to}$, and the projection is the codomain functor.
 
+@include{001T}
