fix a mistaken ref

--- a/_nodes/000Z.md
+++ b/_nodes/000Z.md
@@ -3,7 +3,7 @@ title: The internalization of a small fibration
 macrolib: topos
 ---
 
-Let $C$ be a small cartesian fibration {%ref 000N%} over $B$ a category with finite
+Let $C$ be a small cartesian fibration {%ref 001Q %} over $B$ a category with finite
 limits, i.e. a cartesian fibration that is both locally small {%ref 000I%} and globally
 small {%ref 000P%}. We will show that $C$ is equivalent to the externalization
 {%ref 000V%} of an internal category {%ref 000O%} $\underline{C}$ in $B$,
