--- a/_nodes/001E.md
+++ b/_nodes/001E.md
@@ -5,3 +5,5 @@ title: Generic object
 ---
 
 Let $E$ be a cartesian fibration over $B$; a *generic object* for $E$ is defined to be an object $\bar{u}\in \TotCat{E}$  such that for any $\bar{z}\in \TotCat{E}$ there exists a cartesian map $\bar{z}\to \bar{u}$.
+
+**Warning.** Our terminology differs from that of Jacobs {%cite jacobs:1999 -A%}; what we refer to as a *generic object* here is Jacobs' *weak generic object*. We prefer the unqualified terminology, as generic objects in the stronger sense are very rare.
