add qed squares to proofs

--- a/_nodes/000X.md
+++ b/_nodes/000X.md
@@ -22,3 +22,4 @@ We may choose a generic object {%ref 000K%} for $\brk{C}$, namely the identity e
   \draw[->] (x) to node [sloped,above] {$u$} (C/0');
 \end{tikzpicture}
 »
+{%qed%}
