--- a/_nodes/000Y.md
+++ b/_nodes/000Y.md
@@ -189,3 +189,4 @@ That $\bar{\alpha}:\bar{h}\to\Sub{\alpha}\InvImg{\brk{u,v}}u$ is cartesian follo
 "generalized pullback lemma" for cartesian morphisms {%ref 0014 %}: it suffices
 to observe that both $\bar{p}\Sub{h}:\bar{h}\to u$ and its second factor
 $\bar{p}:\InvImg{\brk{u,v}}u\to u$ are cartesian.
+{%qed%}
