--- a/_nodes/001H.md
+++ b/_nodes/001H.md
@@ -105,3 +105,4 @@ $j:\bar{u}\to\Sub{m;f}\bar{y}$ for which $\bar{h};\bar{g} = j;\bar{g}$; as both
 $\bar{h}$ and $i;\bar{f}$ satisfy this condition, we conclude $\bar{h}=i;\bar{f}$.
 Therefore, there is a unique $i:\bar{u}\to\Sub{m}\bar{x}$ for which
 $\bar{h} = i;\bar{f}$, as required.
+{%qed%}
