--- a/_nodes/001P.md
+++ b/_nodes/001P.md
@@ -89,3 +89,4 @@ that $\bar{g}$ is cartesian as follows, writing $\bar{m} : \bar{u}\to\Sub{m}
     \draw[->,exists] (u') to node [desc] {$\bar{m};i\Sup{-1}$} (nw);
   \end{tikzpicture}
 »
+{%qed%}
