--- a/_nodes/001S.md
+++ b/_nodes/001S.md
@@ -160,3 +160,4 @@ The externalization $\brk{\gl{\bar{u}}}$ of the internal category $\gl{\bar{u}}$
       \draw[->,bend left=30] (l/nw) to node [above] {$\bar{h};\bar{\epsilon};\bar\pi\Sub{2}$} (r/ne);
     \end{tikzpicture}
    »
+{%qed%}
