--- a/_nodes/000W.md
+++ b/_nodes/000W.md
@@ -2,9 +2,11 @@
 macrolib: topos
 taxon: lemma
 ---
-The externalization {%ref 000V%} is a cartesian fibration
+
+The externalization {%ref 000V%} is a cartesian fibration.
 
 **Proof.**
 Given an object $v\in \brk{C}\Sub{y}$ and a
 morphism $f:x\to y$ in $E$, we may define a cartesian lift
 $\InvImg{f}v\to\Sub{f} v$ by setting $\InvImg{f}v = v\circ f : x \to C\Sub{0}$.
+{%qed%}
