--- a/_nodes/0020.md
+++ b/_nodes/0020.md
@@ -72,3 +72,4 @@ We first translate the above into the language of $E$ by unfolding definitions:
 The desired intervening map $\bar{w}\to\Sub{m} \bar{x}\in \OpCat{E}$ shakes out in the language of $E$ to be a span $\brc{\bar{w}\leftarrow \bar{x}\Sub{w}\to\Sub{m} \bar{x}}$ in which the left-hand leg is vertical and the right-hand leg is cartesian over $m:w\to x$. But the left-hand span $\brc{\bar{w}\leftarrow\bar{y}\Sub{w}\to \bar{y}\Sub{x}\cong \bar{x}}$ in the diagram above is exactly what we need.
 
 We leave the converse to the reader.
+{%qed%}
