--- a/_nodes/002B.md
+++ b/_nodes/002B.md
@@ -73,7 +73,8 @@ $\Idn{u}$:
   \end{tikzpicture}
 »
 The composite $i;\bar{m} : \bar{u}\to\Sub{m}\bar{x}$ is the required (cartesian)
-factorization of $\bar{h}$ through $\bar{f}$ over $m$.
-
-TODO: uniqueness?
+factorization of $\bar{h}$ through $\bar{f}$ over $m$. To see that $i;\bar{m}$
+is the unique such map, we observe that all morphisms $\bar{u}\to\Sub{m}\bar{x}$
+factor uniquely through $\bar{m}$ over $\Idn{u}$ as a consequence of $\bar{m}$
+being hypocartesian.
 {%qed %}
