add \tick macro to get rid of \Sup{\prime}

--- a/_nodes/002B.md
+++ b/_nodes/002B.md
@@ -45,9 +45,9 @@ follows:
     \draw[->,exists] (u') to (nw);
   \end{tikzpicture}
 »
-Let $\bar{m}:\bar{u}\Sup{\prime}\to\Sub{m}\bar{x}$ be the hypocartesian lift of
-$m$ at $\bar{x}$, where $\bar{u}\Sup{\prime}\in E\Sub{u}$. By hypothesis, the
-composite $\bar{m};\bar{f} : \bar{u}\Sup{\prime}\to\Sub{m;f}\bar{y}$ is
+Let $\bar{m}:\bar{u}\tick\to\Sub{m}\bar{x}$ be the hypocartesian lift of
+$m$ at $\bar{x}$, where $\bar{u}\tick\in E\Sub{u}$. By hypothesis, the
+composite $\bar{m};\bar{f} : \bar{u}\tick\to\Sub{m;f}\bar{y}$ is
 hypocartesian, so $\bar{h}$ factors uniquely through $\bar{m};\bar{f}$ over
 $\Idn{u}$:
 «
