--- a/_nodes/001P.md
+++ b/_nodes/001P.md
@@ -39,7 +39,7 @@ isomorphism in $E\Sub{b}$.
 Conversely, suppose that $E$ is a cartesian fibration whose vertical maps are
 isomorphisms. Fix $f:x\to y \in B$ and an arbitrary displayed morphism
 $\bar{g}:\bar{x}\to\Sub{f}\bar{y}$. Then $\bar{g}$ is the precomposition of a
-cartesian lift $\bar{f}:\bar{x}\Sup{\prime}\to\Sub{f}\bar{y}$ with a vertical map:
+cartesian lift $\bar{f}:\bar{x}\tick\to\Sub{f}\bar{y}$ with a vertical map:
 «
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
@@ -65,7 +65,7 @@ cartesian lift $\bar{f}:\bar{x}\Sup{\prime}\to\Sub{f}\bar{y}$ with a vertical ma
 »
 Because vertical maps are isomorphisms and $\bar{f}$ is cartesian, we can observe
 that $\bar{g}$ is cartesian as follows, writing $\bar{m} : \bar{u}\to\Sub{m}
-\bar{x}\Sup{\prime}$ for the unique factorization of $\bar{h}$ through $\bar{f}$ over $m$:
+\bar{x}\tick$ for the unique factorization of $\bar{h}$ through $\bar{f}$ over $m$:
 «
   \begin{tikzpicture}[diagram]
     \SpliceDiagramSquare{
