--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -7,9 +7,9 @@
 \newcommand\DirImg[1]{#1_{*}}
 \newcommand\FAM[1]{\boldsymbol{\mathcal{F}}_{#1}}
 \newcommand\FullSubfib[1]{\mathbf{Full}(#1)}
-\newcommand\Gl[1]{\mathsf{gl}_{#1}}
 \newcommand\GL[1]{\boldsymbol{\mathcal{G}}_{#1}}
 \newcommand\gl[1]{\langle #1 \rangle}
+\newcommand\Gl[1]{\mathsf{gl}_{#1}}
 \newcommand\Idn[1]{1_{#1}}
 \newcommand\InvImg[1]{#1^{*}}
 \newcommand\OpCat[1]{#1^{\mathsf{o}}}
@@ -22,6 +22,7 @@
 \newcommand\Sl[2]{#1_{/#2}}
 \newcommand\Sub[1]{_{#1}}
 \newcommand\Sup[1]{^{#1}}
+\newcommand\tick{'}
 \newcommand\TOP[1]{\mathbf{Top}_{#1}}
 \newcommand\TotCat[1]{\widetilde{#1}}
 \newcommand\TotOpCat[1]{#1^{\tilde{\mathsf{o}}}}
