refactor and complete proof of equiv. between 2 defn's of cart. fibration

--- a/_nodes/0029.md
+++ b/_nodes/0029.md
@@ -3,10 +3,10 @@ title: An alternative definition of fibration
 macrolib: topos
 ---
 
-**Warning.** Some authors, including Grothendieck {%cite sga:1 -A%}, give an
+**Warning.** Some authors including Grothendieck {%cite sga:1 -A%} give an
 equivalent definition of cartesian fibration that factors through a
 *nonequivalent* definition of cartesian morphisms. Such authors refer to our
-notion of cartesian morphism as *hypercartesian* {%cite streicher:2018 -A%}.
+notion of cartesian morphism as *hypercartesian* {%cite streicher:2018%}.
 
 @include{002A}
 
@@ -15,4 +15,5 @@ but the converse does not hold.
 
 TODO: example
 
+@include{002C}
 @include{002B}
