--- a/_nodes/002B.md
+++ b/_nodes/002B.md
@@ -4,19 +4,21 @@ macrolib: topos
 ---
 
 Let $E$ be displayed over $B$. Then $E$ is a cartesian fibration in the sense of
-{%ref 0008 %} if and only if the following two conditions hold:
+{%ref 0002%} if and only if the following two conditions hold:
 
-1. Hypocartesian lifts: For each $f:x\to y\in B$ and $\bar{y}\in E\Sub{y}$ there
+1. *Hypocartesian lifts.* For each $f:x\to y\in B$ and $\bar{y}\in E\Sub{y}$ there
    exists a displayed object $\bar{x}\in E\Sub{x}$ and hypocartesian morphism
    $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$.
-2. Closure under composition: If $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$ and
+2. *Closure under composition.* If $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$ and
    $\bar{g}:\bar{y}\to\Sub{g}\bar{z}$ are hypocartesian, then $\bar{f};\bar{g}$
    is hypocartesian.
 
 **Proof.** Suppose first that $E$ is a cartesian fibration in our sense. Then
-$E$ has hypocartesian lifts because it has cartesian lifts.
-
-TODO: closure under composition
+$E$ has hypocartesian lifts because it has cartesian lifts. For closure under
+composition, fix hypocartesian $\bar{f},\bar{g}$; by {%ref 002C%} we know that
+$\bar{f},\bar{g}$ are also cartesian and hence by the generalized pullback
+lemma {%ref 001H%} so is the composite $\bar{f};\bar{g}$; therefore it follows
+that $\bar{f};\bar{g}$ is also hypocartesian.
 
 Conversely, suppose that $E$ is a cartesian fibration in the sense of
 Grothendieck, and let $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$ be the hypocartesian
