add intuition about hypocartesian vs. cartesian re: pullbacks

--- a/_nodes/002B.md
+++ b/_nodes/002B.md
@@ -1,6 +1,7 @@
 ---
 taxon: lemma
 macrolib: topos
+title: Equivalence with Grothendieck's fibrations
 ---
 
 Let $E$ be displayed over $B$. Then $E$ is a cartesian fibration in the sense of
