--- a/_nodes/002C.md
+++ b/_nodes/002C.md
@@ -1,6 +1,7 @@
 ---
 taxon: lemma
 macrolib: topos
+title: Hypocartesian = cartesian in a cartesian fibration
 ---
 
 Let $E$ be a cartesian fibration in the sense of {%ref 0002%}, and let
