--- a/_nodes/0029.md
+++ b/_nodes/0029.md
@@ -11,9 +11,17 @@ notion of cartesian morphism as *hypercartesian* {%cite streicher:2018%}.
 @include{002A}
 
 Cartesian morphisms are clearly hypocartesian (setting $u=x$ and $m=\Idn{x}$),
-but the converse does not hold.
-
-TODO: example
+but the converse does not hold. The problem is that in an arbitrary displayed
+category, hypocartesian morphisms may not be closed under composition.
 
 @include{002C}
+
+Grothendieck {%cite sga:1 -A%} defines a fibration in terms of (what we refer
+to as) hypocartesian morphisms rather than (what we refer to as) cartesian
+morphisms, and therefore imposes the additional constraint that the
+hypocartesian morphisms be closed under composition. In {%ref 002C%} below, we
+verify that these two definitions of cartesian fibration coincide.
+
 @include{002B}
+@include{002D}
+
