add a node title

--- a/_nodes/001P.md
+++ b/_nodes/001P.md
@@ -1,6 +1,7 @@
 ---
 taxon: theorem
 macrolib: topos
+title: Characterization of right fibrations
 ---
 
 A cartesian fibration $E$ over $B$ is a right fibration if and only if
