update several nodes to use cref and pref

--- a/_nodes/000S.md
+++ b/_nodes/000S.md
@@ -3,7 +3,7 @@ title: Exegesis of opposite categories
 macrolib: topos
 ---
 
-The construction of fibered opposite categories {%ref 000Q%} does appear quite
+The construction of fibered opposite categories {%pref 001Z%} does appear quite
 involved, but it can be seen to be inevitable from the perspective of the fiber
 categories $\OpCat{E}\Sub{x}$ {%ref 0005%}. Indeed, let $u,v\in
 \OpCat{E}\Sub{x}$ and fix a *vertical* map $h : u \to v\in \OpCat{E}\Sub{x}$;
