--- a/_nodes/000Z.md
+++ b/_nodes/000Z.md
@@ -3,14 +3,14 @@ title: The internalization of a small fibration
 macrolib: topos
 ---
 
-Let $C$ be a small cartesian fibration {%ref 001Q %} over $B$ a category with finite
-limits, i.e. a cartesian fibration that is both locally small {%ref 000I%} and globally
-small {%ref 000P%}. We will show that $C$ is equivalent to the externalization
+Let $C$ be a small cartesian fibration {%pref 001Q %} over $B$ a category with finite
+limits, i.e. a cartesian fibration that is both locally small {%pref 001B%} and globally
+small {%pref 000P%}. We will show that $C$ is equivalent to the externalization
 {%ref 000V%} of an internal category {%ref 000O%} $\underline{C}$ in $B$,
 namely the full internal subcategory {%ref 0011%} associated to the generic
 object $\bar{u}\in C$.
 
-By {%ref 0011%} we know that the externalization of $\underline{C}$ so-defined
+By {%cref 001S%} we know that the externalization of $\underline{C}$ so-defined
 is equivalent to the full subfibration $\FullSubfib{\bar{u}}$ of $C$ spanned by
 objects that are "classified" by $\bar{u}$. Because $\bar{u}$ is generic, we
 know that *every* object of $C$ is classified by $\bar{u}$, so we are done.
