--- a/_nodes/0013.md
+++ b/_nodes/0013.md
@@ -5,7 +5,7 @@ macrolib: topos
 
 @include{001O}
 
-Recall from {%ref 0005 %} that for every $b\in B$, the collection of displayed
+Recall from {%cref 0005 %} that for every $b\in B$, the collection of displayed
 objects $E\Sub{b}$ and vertical maps $E\Sub{1\Sub{b}}$ forms a category. When $E$ is
 a right fibration over $B$, this category is in fact a *groupoid*.
 
