--- a/_nodes/0019.md
+++ b/_nodes/0019.md
@@ -3,7 +3,7 @@ title: "Example: Coslices and pushouts"
 macrolib: topos
 ---
 
-Dually to {%ref 0003 %}, every category $B$ can also be displayed over itself via its
+Dually to {%cref 0003 %}, every category $B$ can also be displayed over itself via its
 *coslices*. That is, for any category $B$, we define a displayed category
 $\overline{B}$ over $B$ as follows:
 1. For $x\in B$, define $\overline{B}\Sub{x}$ as the collection of pairs
