--- a/_nodes/001J.md
+++ b/_nodes/001J.md
@@ -3,6 +3,6 @@ macrolib: topos
 taxon: exercise
 ---
 
-Let $E$ be displayed over $B$. Prove that the total category {%ref 000A %}
+Let $E$ be displayed over $B$. Prove that the total category {%pref 000A %}
 $\TotCat{\TotOpCat{E}}$ is $\OpCat{\prn{\TotCat{E}}}$, and its projection functor is
 $\OpCat{\prn{p\Sub{E}}} : \OpCat{\TotCat{E}}\to\OpCat{B}$.
