--- a/_nodes/001N.md
+++ b/_nodes/001N.md
@@ -3,5 +3,5 @@ taxon: exercise
 macrolib: topos
 ---
 
-Prove that the total category {%ref 000A%} of $\overline{B}$ is the
+Prove that the total category {%cref 000A%} of $\overline{B}$ is the
 arrow category $B^{\to}$, and the projection is the *domain* functor.
