--- a/_nodes/0029.md
+++ b/_nodes/0029.md
@@ -19,7 +19,7 @@ category, hypocartesian morphisms may not be closed under composition.
 Grothendieck {%cite sga:1 -A%} defines a fibration in terms of (what we refer
 to as) hypocartesian morphisms rather than (what we refer to as) cartesian
 morphisms, and therefore imposes the additional constraint that the
-hypocartesian morphisms be closed under composition. In {%ref 002C%} below, we
+hypocartesian morphisms be closed under composition. In {%cref 002B %} below, we
 verify that these two definitions of cartesian fibration coincide.
 
 @include{002B}
