--- a/_nodes/002C.md
+++ b/_nodes/002C.md
@@ -4,7 +4,7 @@ macrolib: topos
 title: Hypocartesian = cartesian in a cartesian fibration
 ---
 
-Let $E$ be a cartesian fibration in the sense of {%ref 0002%}, and let
+Let $E$ be a cartesian fibration in the sense of {%cref 0002%}, and let
 $\bar{f} : \bar{x}\to\Sub{f}\bar{y}$ be displayed over $f:x\to y$. The
 displayed morphism $\bar{f}$ is cartesian if and only if it is hypocartesian.
 
