--- a/_nodes/000G.md
+++ b/_nodes/000G.md
@@ -5,7 +5,7 @@ macrolib: topos
 
 An ordinary category $E$ is called *locally small* when for any $x,y\in E$ the
 collection of morphisms $x\to y$ is a set.  This property of $E$ can be
-rephrased in terms of its *family fibration* {% ref 0006 %} $\FAM{E}$ over
+rephrased in terms of its *family fibration* {% pref 0006 %} $\FAM{E}$ over
 $\SET$ as follows.
 
 Consider an index set $I\in \SET$ and two families $u,v\in C^I$. We may define
