--- a/_nodes/000N.md
+++ b/_nodes/000N.md
@@ -10,7 +10,7 @@ to $\SET$ (i.e. small categories) and their family fibrations over $\SET$.
 
 @include{001Q}
 
-We have already seen in {%ref 000G%} and {%ref 000L%} that smallness in the
+We have already seen in {%cref 000G%} and {%cref 000L%} that smallness in the
 sense of the definition above appropriately generalizes the ordinary notion of
 smallness for categories over $\SET$. Another perspective on smallness is given
 by the *internal language*, in which a category is viewed as an algebra for the
