--- a/_nodes/001T.md
+++ b/_nodes/001T.md
@@ -3,5 +3,5 @@ taxon: exercise
 macrolib: topos
 ---
 
-Prove that the total category $\TotCat{\SelfIx{B}}$ of the canonical self-indexing {%ref 0003%} is the arrow category $B^{\to}$, and the projection is the codomain functor.
+Prove that the total category $\TotCat{\SelfIx{B}}$ of the canonical self-indexing {%pref 0003%} is the arrow category $B^{\to}$, and the projection is the codomain functor.
 
