--- a/_nodes/002B.md
+++ b/_nodes/002B.md
@@ -1,11 +1,11 @@
 ---
 taxon: lemma
 macrolib: topos
-title: Equivalence with Grothendieck's fibrations
+title: "Equivalence with Grothendieck's fibrations"
 ---
 
 Let $E$ be displayed over $B$. Then $E$ is a cartesian fibration in the sense of
-{%ref 0002%} if and only if the following two conditions hold:
+{%cref 0002%} if and only if the following two conditions hold:
 
 1. *Hypocartesian lifts.* For each $f:x\to y\in B$ and $\bar{y}\in E\Sub{y}$ there
    exists a displayed object $\bar{x}\in E\Sub{x}$ and hypocartesian morphism
@@ -16,9 +16,8 @@ Let $E$ be displayed over $B$. Then $E$ is a cartesian fibration in the sense of
 
 **Proof.** Suppose first that $E$ is a cartesian fibration in our sense. Then
 $E$ has hypocartesian lifts because it has cartesian lifts. For closure under
-composition, fix hypocartesian $\bar{f},\bar{g}$; by {%ref 002C%} we know that
-$\bar{f},\bar{g}$ are also cartesian and hence by the generalized pullback
-lemma {%ref 001H%} so is the composite $\bar{f};\bar{g}$; therefore it follows
+composition, fix hypocartesian $\bar{f},\bar{g}$; by {%cref 002C%} we know that
+$\bar{f},\bar{g}$ are also cartesian and hence by {%cref 001H%} so is the composite $\bar{f};\bar{g}$; therefore it follows
 that $\bar{f};\bar{g}$ is also hypocartesian.
 
 Conversely, suppose that $E$ is a cartesian fibration in the sense of
