--- a/_nodes/002D.md
+++ b/_nodes/002D.md
@@ -9,8 +9,8 @@ of as two distinct ways to generalize the concept of a pullback, depending on
 what one considers the essential properties of pullbacks. Hypocartesian
 morphisms more directly generalize the "little picture" universal property of
 pullbacks as limiting cones, whereas cartesian morphisms generalize the "big
-picture" dynamics of the pullback pasting lemma. As we have seen in {%ref
+picture" dynamics of the pullback pasting lemma. As we have seen in {%cref
 002C%} these two notions coincide in any cartesian fibration; the instance of
-this result for the canonical self-indexing {%ref 001X%} verifies that
+this result for the canonical self-indexing {%pref 001X%} verifies that
 pullbacks can be equivalently presented in terms of cartesian morphisms, as we
-have pointed out in {%ref 001Y%}.
+have pointed out in {%cref 001Y%}.
