fix confusing owrding

--- a/_nodes/002G.md
+++ b/_nodes/002G.md
@@ -1,9 +1,9 @@
 ---
-title: Separating family for a locally small category
+title: Separating family for a category
 taxon: definition
 ---
 
-Given a locally small category $E$, a set-indexed family
+Given an ordinary category $E$, a set-indexed family
 $\prn{s\Sub{i}}\Sub{i\in I}$ of $E$-objects is called a *small separating
-family* for $E$ when for all $i\in I$ and all $u:s_i\to x$ we have
-$u;f=u;g$, then $f=g$.
+family* for $E$ when, assuming that for all $i\in I$ and all $u:s_i\to x$ we have
+$u;f=u;g$, we then have $f=g$.
