disentangle a bunch of math, discussion of figure shapes

--- a/_bibliography/refs.bib
+++ b/_bibliography/refs.bib
@@ -97,3 +97,12 @@
 }
 
 
+@book{lawvere-schanuel:2009,
+  author = {Lawvere, F. William and Schanuel, Stephen H.},
+  address = {New York, NY, USA},
+  publisher = cup,
+  year = {2009},
+  edition = {2nd},
+  isbn = {0-521-89485-9},
+  title = {Conceptual Mathematics: A First Introduction to Categories},
+}
