refer to small separator in definition of topos

--- a/_nodes/0025.md
+++ b/_nodes/0025.md
@@ -7,7 +7,7 @@ taxon: definition
 Let $E$ be a geometric universe. A $E$-*topos* $X$ or a *topos in
 $E$* is defined to be a geometric universe $\Sh{X}$ equipped with a structure
 map $X:E\to\Sh{X}$ whose gluing fibration $\GL{X}$ has a
-generating family. A morphism of $E$-topoi $f:{X}\to{Y}$ is defined by a
+small separator {%pref 002H%}. A morphism of $E$-topoi $f:{X}\to{Y}$ is defined by a
 morphism $\Sh{f}:\Sh{Y}\to\Sh{X}$ of geometric universes equipped with
 a 2-isomorphism $\phi_{f}:\Sh{f}\circ Y\cong X$ in $[E,\Sh{X}]$.
 «
