--- a/_nodes/002E.md
+++ b/_nodes/002E.md
@@ -12,8 +12,8 @@ morphisms of $E$ in the sense of {%cref 002G%} below.
 @include{002G}
 
 The intuition of {%cref 002G%} is that to compare two morphisms $f,g:x\to y\in E$,
-it suffices to check that they behave the same on all $z\Sub{i}$-shaped figures
-when $\prn{z\Sub{i}}\Sub{i\in I}$ is a separating family for $E$.
+it suffices to check that they behave the same on all $s\Sub{i}$-shaped figures
+when $\prn{s\Sub{i}}\Sub{i\in I}$ is a separating family for $E$.
 
 @include{002F}
 
