tweak a few references and node titles

--- a/_nodes/000P.md
+++ b/_nodes/000P.md
@@ -1,6 +1,7 @@
 ---
 macrolib: topos
 taxon: definition
+title: Globally small fibration
 ---
 
-A cartesian fibration $E$ over $B$ is called *globally small* when it has a generic object {%ref 000K%}.
+A cartesian fibration $E$ over $B$ is called *globally small* when it has a generic object in the sense of {%cref 001E%}.
