--- a/_nodes/001Q.md
+++ b/_nodes/001Q.md
@@ -1,6 +1,7 @@
 ---
 taxon: definition
 macrolib: topos
+title: Small fibration
 ---
 
 A cartesian fibration is called *small* when it is both locally small
