tidy up section 5 using new taxons

--- a/_nodes/0015.md
+++ b/_nodes/0015.md
@@ -7,6 +7,13 @@ Cocartesian fibrations are a dual notion to cartesian fibrations, in which the
 variance of indexing is reversed.
 
 @include{0016}
+
+We use a "pushout corner" to indicate $\bar{x}\to\bar{y}$ as a cocartesian morphism,
+a notation justified by {%cref 0019 %}.
+
 @include{0017}
+
+**Remark.** These are also known as *opfibrations*.
+
 @include{0018}
 @include{0019}
