--- a/_nodes/0016.md
+++ b/_nodes/0016.md
@@ -1,6 +1,7 @@
 ---
-title: Cocartesian morphisms
+title: Cocartesian morphism
 macrolib: topos
+taxon: definition
 ---
 
 Let $E$ be displayed over $B$, and let $f:x\to y \in B$; a morphism
@@ -30,6 +31,3 @@ $\bar{m} : \bar{y}\to\Sub{m} \bar{u}$ with $\bar{f};\bar{m} = \bar{h}$:
     \draw[->,exists] (ne) to node [desc] {$\bar{m}$} (u');
   \end{tikzpicture}
 »
-
-We use a "pushout corner" to indicate $\bar{x}\to\bar{y}$ as a cocartesian morphism,
-a notation justified by {%cref 0019 %}.
