--- a/_nodes/0017.md
+++ b/_nodes/0017.md
@@ -1,10 +1,9 @@
 ---
-title: The definition of cocartesian fibrations
+title: Cocartesian fibration
 macrolib: topos
+taxon: definition
 ---
 
 A displayed category $E$ over $B$ is a *cocartesian fibration* when for each
 $f : x \to y\in B$ and $\bar{x}\in E\Sub{x}$, there exists a displayed object
 $\bar{y}\in E\Sub{y}$ and a *cocartesian* morphism $\bar{f} : \bar{x}\to\Sub{f} \bar{y}$.
-
-**Remark.** These are also known as *opfibrations*.
