--- a/_nodes/002J.md
+++ b/_nodes/002J.md
@@ -9,14 +9,14 @@ $x=\ObjTerm{E}$) then a morphism $x\to y$ is a "point" of the "space" $y$.
 We refer to $x$ as the figure-shape in any such scenario.
 The perspective of morphisms as figures is developed in more detail by Lawvere and Schanuel {%cite lawvere-schanuel:2009 -A%}.
 
-It often happens that there a useful class of figure shapes can be arranged
+It often happens that a useful class of figure shapes can be arranged
 into a *set*-indexed family $\prn{u\Sub{i}}\Sub{i\in I}$; viewed from the
-perspective of the family fibration {%pref 0006%}, this family is just a
-displayed object $\bar{u}$ over $I$ and then a figure shape relative to
+perspective of the family fibration $\FAM{E}$ {%pref 0006%}, this family is just a
+displayed object $\bar{u}$ over $I$ and then a figure shape "in"
 this family is given by any cartesian morphism $\bar{z}\to\bar{u}$. We will
 generalize this situation to the case of an arbitrary fibration, by
 constructing the full subfibration spanned by displayed objects equipped
-with a cartesian morphism into $\bar{u}$.
+with a cartesian morphism into $\bar{u}$ in {%cref 0010%} below.
 
 @include{0010}
 @include{002K}
