tweak a few refs

--- a/_nodes/0018.md
+++ b/_nodes/0018.md
@@ -5,8 +5,8 @@ macrolib: topos
 
 @include{001I}
 
-**Warning.** Do not confuse this construction with {%ref 000Q %}, which produces a
-displayed category over $B$.
+**Warning.** Do not confuse this construction with {%cref 001Z%}, which produces a
+displayed category over $B$ and not $\OpCat{B}$.
 
 @include{001J}
 @include{001K}
