fix missing macrolib

--- a/_nodes/002F.md
+++ b/_nodes/002F.md
@@ -1,6 +1,7 @@
 ---
 title: Well-pointedness of the category of sets
 taxon: example
+macrolib: topos
 ---
 
 In the category of sets, to compare two morphisms it is enough to check
