first cut at definability à la Bénabou

--- a/_bibliography/refs.bib
+++ b/_bibliography/refs.bib
@@ -106,3 +106,10 @@
   isbn = {0-521-89485-9},
   title = {Conceptual Mathematics: A First Introduction to Categories},
 }
+
+@book{borceux:1994:vol2,
+  author = {Borceux, Francis},
+  publisher = cup,
+  year = {1994},
+  title = {Handbook of Categorical Algebra 2 -- Categories and Structures},
+}
