add nlab tag plugin

--- a/_nodes/000O.md
+++ b/_nodes/000O.md
@@ -2,8 +2,7 @@
 title: Internal categories
 ---
 
-The notion of a (meta-)category is an [essentially algebraic
-theory](http://ncatlab.org/nlab/show/essentially+algebraic+theory). As such it is
+The notion of a (meta-)category is an {%nlab essentially algebraic theory%}. As such it is
 possible to compute *models* of this theory in any category that has finite
 limits.
 
