--- a/_nodes/000R.md
+++ b/_nodes/000R.md
@@ -15,7 +15,7 @@ well-defined; the notion is entirely schematic.
 
 
 **Assumption.** We assume a meta-category $\BoldSymbol{\mathfrak{Coll}}$ whose
-objects we will refer to as "collections". We assume that the meta-category of all collections satisfies the axioms of Lawvere's [ETCS](http://ncatlab.org/nlab/show/ETCS).
+objects we will refer to as "collections". We assume that the meta-category of all collections satisfies the axioms of Lawvere's {%nlab ETCS%}.
 
 @include{001G}
 
@@ -27,8 +27,7 @@ categories exist regardless of size.
 
 **Assumption.** At times we may assume that there exists a *category*
 $\SET\subseteq\BoldSymbol{\mathfrak{Coll}}$ of collections that we will refer
-to as sets, such that $\SET$ is closed under the axioms of
-[ETCS](https://ncatlab.org/nlab/show/ETCS). Rather than work with $\SET$ at all
+to as sets, such that $\SET$ is closed under the axioms of {%nlab ETCS%}. Rather than work with $\SET$ at all
 times, our approach is to use the tools of relative category theory to
 objectify the notions of "small" and "locally small" category over any category
 $B$, generalizing the role of $\SET$ from classical category theory.
