--- a/_nodes/001A.md
+++ b/_nodes/001A.md
@@ -13,4 +13,4 @@ in $E$ is defined by the following data:
 5. a generic composition morphism $C\Sub{1}\times\Sub{C\Sub{0}}C\Sub{1}\to C\Sub{1}$,
 6. satisfying a number of laws corresponding to those of a category.
 
-For the details of these laws, we refer to the [nLab](http://ncatlab.org/nlab/show/internal+category).
+For the details of these laws, we refer to the nLab ({%nlab internal category%}).
