add coslice macro

--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -4,6 +4,7 @@
 \newcommand\CandHom[3]{\mathbf{H}_{#1}(#2,#3)}
 \newcommand\Cod[1]{\mathsf{cod}_{#1}}
 \newcommand\Con[1]{\mathsf{#1}}
+\newcommand\CoSl[2]{_{#1 /}#2}
 \newcommand\DirImg[1]{#1_{*}}
 \newcommand\FAM[1]{\boldsymbol{\mathcal{F}}_{#1}}
 \newcommand\FullSubfib[1]{\mathbf{Full}(#1)}
