Discuss codomain opfibration and domain fibration; clean up domain opfibration.

--- a/_nodes/0015.md
+++ b/_nodes/0015.md
@@ -15,4 +15,5 @@ a notation justified by {%cref 0019 %}.
 **Remark.** These are also known as *opfibrations*.
 
 @include{0018}
+@include{002X}
 @include{0019}
