--- a/_nodes/001Y.md
+++ b/_nodes/001Y.md
@@ -2,5 +2,5 @@
 taxon: exercise
 ---
 
-Prove that $\SelfIx{B}$ from {%ref 0003%} is a cartesian fibration if and only if $B$ has pullbacks.
+Prove that $\SelfIx{B}$ from {%ref 001X%} is a cartesian fibration if and only if $B$ has pullbacks.
 
