--- a/_nodes/0019.md
+++ b/_nodes/0019.md
@@ -1,30 +1,12 @@
 ---
-title: "Example: Coslices and pushouts"
+title: "Example: The opposite self-indexing"
 ---
 
-Dually to {%cref 0003 %}, every category $B$ can also be displayed over itself via its
-*coslices*. That is, for any category $B$, we define a displayed category
-$\overline{B}$ over $B$ as follows:
-1. For $x\in B$, define $\overline{B}\Sub{x}$ as the collection of pairs
-   $(\bar{x}\in B,p\Sub{x}:x\to\bar{x})$.
-2. For $f : x\to y\in B$, define $\overline{B}\Sub{f}$ to be the collection of
-   commuting squares in the following configuration:
-«
-  \DiagramSquare{
-    height = 1.7cm,
-    sw = \bar{x},
-    se = \bar{y},
-    nw = x,
-    ne = y,
-    west = p\Sub{x},
-    east = p\Sub{y},
-    south = \bar{f},
-    north = f,
-    west/style = {->,exists},
-    east/style = {->,exists},
-    south/style = {->,exists},
-  }
-»
+Dually to the canonical self-indexing {%pref 001X %}, every category $B$ can
+also be displayed over itself via its *coslices* $\CoSl{x}{B}$.
+
+@include{002Z}
 
 @include{001M}
 @include{001N}
+@include{0030}
