tweak terminology (opposite self-indexing => dual self-indexing)

--- a/_nodes/0019.md
+++ b/_nodes/0019.md
@@ -1,5 +1,5 @@
 ---
-title: "Example: The opposite self-indexing"
+title: "Example: The dual self-indexing"
 ---
 
 Dually to the canonical self-indexing {%pref 001X %}, every category $B$ can
