--- a/assets/macros/topos.sty
+++ b/assets/macros/topos.sty
@@ -4,7 +4,7 @@
 \newcommand\CandHom[3]{\mathbf{H}_{#1}(#2,#3)}
 \newcommand\Cod[1]{\mathsf{cod}_{#1}}
 \newcommand\Con[1]{\mathsf{#1}}
-\newcommand\CoSl[2]{_{#1 /}#2}
+\newcommand\CoSl[2]{#2^{\setminus #1}}
 \newcommand\DirImg[1]{#1_{*}}
 \newcommand\FAM[1]{\boldsymbol{\mathcal{F}}_{#1}}
 \newcommand\FullSubfib[1]{\mathbf{Full}(#1)}
@@ -15,8 +15,8 @@
 \newcommand\InvImg[1]{#1^{*}}
 \newcommand\ObjTerm[1]{\mathbf{1}_{#1}}
 \newcommand\OpCat[1]{#1^{\mathsf{o}}}
-\newcommand\OpGl[1]{\overline{\mathsf{gl}}_{#1}}
 \newcommand\OpGL[1]{\overline{\boldsymbol{\mathcal{G}}}_{#1}}
+\newcommand\OpGl[1]{\overline{\mathsf{gl}}_{#1}}
 \newcommand\prn[1]{(#1)}
 \newcommand\SelfIx[1]{\underline{#1}}
 \newcommand\SET{\mathbf{Set}}
