make on ref parenthetical

--- a/_nodes/000S.md
+++ b/_nodes/000S.md
@@ -4,7 +4,7 @@ title: Exegesis of opposite categories
 
 The construction of fibered opposite categories {%pref 001Z%} does appear quite
 involved, but it can be seen to be inevitable from the perspective of the fiber
-categories $\OpCat{E}\Sub{x}$ {%ref 0005%}. Indeed, let $u,v\in
+categories $\OpCat{E}\Sub{x}$ {%pref 0005%}. Indeed, let $u,v\in
 \OpCat{E}\Sub{x}$ and fix a *vertical* map $h : u \to v\in \OpCat{E}\Sub{x}$;
 by unfolding definitions, we see that the vertical map $h : u \to v$ is
 uniquely determined by a morphism $v\to u\in E\Sub{x}$.
