experimenting with string diagrams in topos

--- a/assets/macros/jon-tikz.sty
+++ b/assets/macros/jon-tikz.sty
@@ -1,7 +1,7 @@
 \RequirePackage{xparse}
 \RequirePackage{tikz}
 \usetikzlibrary{matrix,arrows}
-\usetikzlibrary{fit,positioning,calc}
+\usetikzlibrary{fit,positioning,calc,shapes}
 \usetikzlibrary{decorations.pathreplacing}
 \usetikzlibrary{decorations.pathmorphing}
 \usetikzlibrary{decorations.markings}
