--- a/_nodes/0000.md
+++ b/_nodes/0000.md
@@ -8,8 +8,9 @@ following data {%cite ahrens-lumsdaine:2019%}:
 1. for each object $x\in B$, a collection of *displayed objects* $E\Sub{x}$,
 2. for each morphism $f : x \to y\in B$ and displayed objects $\bar{x}\in E\Sub{x}$ and
    $\bar{y}\in E\Sub{y}$, a family of collections of *displayed morphisms* $E\Sub{f}(\bar{x},\bar{y})$,
+   which we may also write $\bar{f}:\bar{x}\to\Sub{f} \bar{y}$,
 3. for each $x\in B$ and $\bar{x}\in E\Sub{x}$, a morphism $\Idn{\bar{x}} \in
-   E\Sub{\Idn{x}}(\bar{x},\bar{x})$ which we may also write $\bar{f}:\bar{x}\to\Sub{f} \bar{y}$,
+   E\Sub{\Idn{x}}(\bar{x},\bar{x})$,
 4. for each $f : x \to y$ and $g:y \to z$ in $B$ and objects $\bar{x}\in E\Sub{x}, \bar{y}\in
    E\Sub{y}, \bar{z}\in E\Sub{z}$, a function
     \\[
