--- a/_nodes/0004.md
+++ b/_nodes/0004.md
@@ -6,7 +6,7 @@ Let $E$ be displayed over $B$ and let $F$ be displayed over $C$. If $U:B \to C$
 is an ordinary functor, than a *displayed functor* from $E$ to $F$ over $U$ is
 given by the following data:
 
-1. for each displayed object $\bar{x}\in E\Sub{x}$, a displayed object $\bar{U}\bar{x}\in E\Sub{Ux}$,
+1. for each displayed object $\bar{x}\in E\Sub{x}$, a displayed object $\bar{U}\bar{x}\in F\Sub{Ux}$,
 2. for each displayed morphism $\bar{f} : \bar{x}\to\Sub{f}\bar{y}$, a displayed morphism $\bar{U}\bar{f} : \bar{U}\bar{x}\to\Sub{Uf}\bar{U}\bar{y}$,
 3. such that the assignment $\bar{U}f$ preserves displayed identities and displayed composition.
 
