switching to ZX package for string diagrams

--- a/_nodes/0025.md
+++ b/_nodes/0025.md
@@ -27,16 +27,12 @@ diagram views 2-cell as a "transformer" through which information passes
 along a wire; the input/output interface of such a transformer is written on
 the wires. Regions of whitespace denote objects of the ambient 2-category.
 «
-    \begin{tikzpicture}[diagram]
-      \node[draw,rectangle] (phi/f) {$\phi_f$};
-      \node (phi/f/next/1) [below left = of phi/f] {};
-      \node (phi/f/next/2) [below right = of phi/f] {};
-      \draw (phi/f.north) ++ (0,1) to node [upright desc] {$X$} (phi/f.north);
-      \draw (phi/f.south) to node [desc] {$Y$} (phi/f/next/1.north);
-      \draw (phi/f.south) to node [desc] {$\Sh{f}$} (phi/f/next/2.north);
-    \end{tikzpicture}
+\begin{ZX}
+\zxN{} &\dar[close]{X}\\
+\zxN{} &\zxX[pilr]{\phi_f}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{f}}\\[3mm]
+\zxN{} & \zxN{} & \zxN{}
+\end{ZX}
 »
-
 
 A 2-morphism $\alpha:{f}\to{g}$ in $[X,Y]$ is defined to be a
 2-morphism $\alpha:\Sh{f}\to{\Sh{g}}$ compatible with $\phi_{f},\phi_{g}$
@@ -67,23 +63,16 @@ in the sense that the following pasting diagrams are equal:
 
 We may likewise represent the equation above in terms of string diagrams.
 «
-\begin{tikzpicture}[diagram]
-  \node[draw,rectangle] (phi/f) {$\phi_f$};
-  \node[below left = of phi/f] (phi/f/next/1) {};
-  \node[draw,rectangle,below right = of phi/f] (alpha) {$\alpha$};
-  \node[below = 1.5cm of alpha] (alpha/next) {};
-  \draw (phi/f.north) ++ (0,1) to node [upright desc] {$X$} (phi/f.north);
-  \draw (phi/f.south) to node [desc] {$Y$} (phi/f/next/1.north);
-  \draw (phi/f.south) to node [desc] {$\Sh{f}$} (alpha.north);
-  \draw[] (alpha) to node [upright desc] {$\Sh{g}$} (alpha/next.north);
-\end{tikzpicture}
+\begin{ZX}
+  \zxN{} &\dar[close]{X}\\
+   \zxN{} & \zxX[pilr]{\varphi_f} \arrow[-N', near end, close, swap]{ddl}{Y} \drar[N, close, pos=.6]{\Sh{f}}\\
+   \zxN{} & \zxN{} & \zxX[pilr]{\alpha} \dar{\Sh{g}}\\
+   \zxN{} & \zxN{} & \zxN{}
+\end{ZX}
 \qquad
-\begin{tikzpicture}[diagram]
-  \node[draw,rectangle] (phi/g) {$\phi_g$};
-  \node (phi/g/next/1) [below left = of phi/g] {};
-  \node (phi/g/next/2) [below right = of phi/g] {};
-  \draw (phi/g.north) ++ (0,1) to node [upright desc] {$X$} (phi/g.north);
-  \draw (phi/g.south) to node [desc] {$Y$} (phi/g/next/1.north);
-  \draw (phi/g.south) to node [desc] {$\Sh{g}$} (phi/g/next/2.north);
-\end{tikzpicture}
+\begin{ZX}
+  \zxN{} &\dar[close]{X}\\
+  \zxN{} &\zxX[pilr]{\phi_g}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{g}}\\[3mm]
+  \zxN{} & \zxN{} & \zxN{}
+\end{ZX}
 »
