rename "canonical self-indexing" to "fundamental self-indexing"

--- a/_nodes/001T.md
+++ b/_nodes/001T.md
@@ -2,5 +2,4 @@
 taxon: exercise
 ---
 
-Prove that the total category $\TotCat{\SelfIx{B}}$ of the canonical self-indexing {%pref 0003%} is the arrow category $B^{\to}$, and the projection is the codomain functor.
-
+Prove that the total category $\TotCat{\SelfIx{B}}$ of the fundamental self-indexing {%pref 0003%} is the arrow category $B^{\to}$, and the projection is the codomain functor.
