--- a/_nodes/001X.md
+++ b/_nodes/001X.md
@@ -3,7 +3,7 @@ title: The canonical self-indexing
 taxon: construction
 ---
 
-Let $B$ be an ordinary category; there is a canonical displayed category
+Let $B$ be an ordinary category; there is an important displayed category
 $\SelfIx{B}$ over $B$ given fiberwise by the *slices* of $B$.
 1. For $x\in B$, we define $\SelfIx{B}\Sub{x}$ to be the collection $\Sl{B}{x}$
    of pairs $(\bar{x}\in B,p\Sub{x}:\bar{x}\to x)$.
