--- a/_nodes/0028.md
+++ b/_nodes/0028.md
@@ -4,7 +4,7 @@ title: The gluing fibration
 ---
 
 Let $f : E \to F$ be a morphism of geometric universes; the properties of such
-a morphism are profitably accessed through its *gluing fibration* $\GL{f}$ over $E$, obtained as the base change {%ref 0007%} along the inverse image $\InvImg{f} : E \to F$ of the canonical self-indexing {%ref 0003%} of $F$.
+a morphism are profitably accessed through its *gluing fibration* $\GL{f}$ over $E$, obtained as the base change {%ref 0007%} along the inverse image $\InvImg{f} : E \to F$ of the fundamental self-indexing {%ref 0003%} of $F$.
 «
   \DiagramSquare{
     ne = \SelfIx{F},
