--- a/_nodes/0019.md
+++ b/_nodes/0019.md
@@ -2,7 +2,7 @@
 title: "Example: The dual self-indexing"
 ---
 
-Dually to the canonical self-indexing {%pref 001X %}, every category $B$ can
+Dually to the fundamental self-indexing {%pref 001X %}, every category $B$ can
 also be displayed over itself via its *coslices* $\CoSl{x}{B}$.
 
 @include{002Z}
