--- a/_nodes/002D.md
+++ b/_nodes/002D.md
@@ -10,6 +10,6 @@ morphisms more directly generalize the "little picture" universal property of
 pullbacks as limiting cones, whereas cartesian morphisms generalize the "big
 picture" dynamics of the pullback pasting lemma. As we have seen in {%cref
 002C%} these two notions coincide in any cartesian fibration; the instance of
-this result for the canonical self-indexing {%pref 001X%} verifies that
+this result for the fundamental self-indexing {%pref 001X%} verifies that
 pullbacks can be equivalently presented in terms of cartesian morphisms, as we
 have pointed out in {%cref 001Y%}.
