--- a/_nodes/002L.md
+++ b/_nodes/002L.md
@@ -21,9 +21,8 @@ as a class.
 
 Bénabou then generalizes the definitions above to an arbitrary fibration,
 in such a way that the general fibered notion of definable class is
-equivalent in the canonical self-indexing $\SelfIx{\mathscr{M}}$ to that of
+equivalent in the fundamental self-indexing $\SelfIx{\mathscr{M}}$ to that of
 definable classes in the sense of {%cref 002V%}.
 
 @include{002Q}
 @include{002S}
-
