--- a/_nodes/002S.md
+++ b/_nodes/002S.md
@@ -2,7 +2,7 @@
 title: Bénabou's notion of definability
 ---
 
-We will now construe {%cref 002Q%} as the instantiation at the canonical
+We will now construe {%cref 002Q%} as the instantiation at the fundamental
 self-indexing $\SelfIx{\mathscr{M}}$ of a more general notion of
 definability for classes of objects in a cartesian fibration, defined
 forthwith. The following definition of definability in a cartesian fibration is due to Bénabou, but is discussed in print by Borceux {%cite borceux:1994:vol2 -A%}, Jacobs {%cite jacobs:1999 -A%}, Streicher {%cite streicher:2018 -A%}.
