--- a/_nodes/002X.md
+++ b/_nodes/002X.md
@@ -1,8 +1,8 @@
 ---
-title: "Example: Revisiting the canonical self-indexing"
+title: "Example: Revisiting the fundamental self-indexing"
 ---
 
-Recall that the canonical self-indexing $\SelfIx{B}$ {%pref 001X %} of a category $B$
+Recall that the fundamental self-indexing $\SelfIx{B}$ {%pref 001X %} of a category $B$
 is a displayed category with $\SelfIx{B}\Sub{x} = \Sl{B}{x}$.
 As discussed in {%cref 001Y %}, $\SelfIx{B}$ is a cartesian fibration over $B$ if and
 only if $B$ has pullbacks. However, $\SelfIx{B}$ is unconditionally a *cocartesian*
