--- a/_nodes/0025.md
+++ b/_nodes/0025.md
@@ -8,7 +8,7 @@ $E$* is defined to be a geometric universe $\Sh{X}$ equipped with a structure
 map $X:E\to\Sh{X}$ whose gluing fibration $\GL{X}$ has a
 small separator {%pref 002H%}. A morphism of $E$-topoi $f:{X}\to{Y}$ is defined by a
 morphism $\Sh{f}:\Sh{Y}\to\Sh{X}$ of geometric universes equipped with
-a 2-isomorphism $\phi_{f}:X \cong Y;\Sh{f}$ in $[E,\Sh{X}]$.
+a 2-isomorphism $\varphi_{f}:X \cong Y;\Sh{f}$ in $[E,\Sh{X}]$.
 «
     \begin{tikzpicture}[diagram]
       \node (E) {$E$};
@@ -17,7 +17,7 @@ a 2-isomorphism $\phi_{f}:X \cong Y;\Sh{f}$ in $[E,\Sh{X}]$.
       \draw[->] (E) to node [sloped,above] {$Y$} (S/Y);
       \draw[->] (S/Y) to node (S/f) [below] {$\Sh{f}$} (S/X);
       \draw[->] (E) to node [sloped,above] {$X$} (S/X);
-      \node [between = E and S/f] {$\phi_{f}$};
+      \node [between = E and S/f] {$\varphi_{f}$};
     \end{tikzpicture}
 »
 
@@ -29,13 +29,13 @@ the wires. Regions of whitespace denote objects of the ambient 2-category.
 «
 \begin{ZX}
 \zxN{} &\dar[close]{X}\\
-\zxN{} &\zxX[pilr]{\phi_f}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{f}}\\[3mm]
+\zxN{} &\zxX[pilr]{\varphi_f}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{f}}\\[3mm]
 \zxN{} & \zxN{} & \zxN{}
 \end{ZX}
 »
 
 A 2-morphism $\alpha:{f}\to{g}$ in $[X,Y]$ is defined to be a
-2-morphism $\alpha:\Sh{f}\to{\Sh{g}}$ compatible with $\phi_{f},\phi_{g}$
+2-morphism $\Sh{\alpha}:\Sh{f}\to{\Sh{g}}$ compatible with $\varphi_{f},\varphi_{g}$
 in the sense that the following pasting diagrams are equal:
 «
   \begin{tikzpicture}[diagram,baseline=(S/X.base)]
@@ -46,10 +46,10 @@ in the sense that the following pasting diagrams are equal:
     \draw[->] (S/Y) to node (S/f) [upright desc] {$\Sh{f}$} (S/X);
     \draw[->] (E) to node [sloped,above] {$X$} (S/X);
     \draw[->,bend right=60] (S/Y) to node (S/g) [below] {$\Sh{g}$} (S/X);
-    \node [between = E and S/f] {$\phi_{f}$};
-    \node [between = S/g.north and S/f] {$\alpha$};
+    \node [between = E and S/f] {$\varphi_{f}$};
+    \node [between = S/g.north and S/f] {$\Sh{\alpha}$};
   \end{tikzpicture}
-  \qquad
+  =
   \begin{tikzpicture}[diagram,baseline=(S/X.base)]
     \node (E) {$E$};
     \node (S/Y) [below left = of E] {$\Sh{Y}$};
@@ -57,7 +57,7 @@ in the sense that the following pasting diagrams are equal:
     \draw[->] (E) to node [sloped,above] {$Y$} (S/Y);
     \draw[->] (E) to node [sloped,above] {$X$} (S/X);
     \draw[->,bend right=60] (S/Y) to node (S/g) [below] {$\Sh{g}$} (S/X);
-    \node [between = S/Y and S/X] {$\phi_g$};
+    \node [between = S/Y and S/X] {$\varphi_g$};
   \end{tikzpicture}
 »
 
@@ -66,13 +66,13 @@ We may likewise represent the equation above in terms of string diagrams.
 \begin{ZX}
   \zxN{} &\dar[close]{X}\\
    \zxN{} & \zxX[pilr]{\varphi_f} \arrow[-N', near end, close, swap]{ddl}{Y} \drar[N, close, pos=.6]{\Sh{f}}\\
-   \zxN{} & \zxN{} & \zxX[pilr]{\alpha} \dar{\Sh{g}}\\
+   \zxN{} & \zxN{} & \zxX[pilr]{\Sh{\alpha}} \dar{\Sh{g}}\\
    \zxN{} & \zxN{} & \zxN{}
 \end{ZX}
-\qquad
+=
 \begin{ZX}
   \zxN{} &\dar[close]{X}\\
-  \zxN{} &\zxX[pilr]{\phi_g}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{g}}\\[3mm]
+  \zxN{} &\zxX[pilr]{\varphi_g}\dlar[swap,-o,close]{Y}\drar[N,close]{\Sh{g}}\\[3mm]
   \zxN{} & \zxN{} & \zxN{}
 \end{ZX}
 »
