starting to discuss different 2-categories of geometric universes

--- a/_nodes/0025.md
+++ b/_nodes/0025.md
@@ -4,9 +4,8 @@ taxon: definition
 ---
 
 Let $E$ be a geometric universe. A $E$-*topos* $X$ or a *topos in
-$E$* is defined to be a geometric universe $\Sh{X}$ equipped with a structure
-map $X:E\to\Sh{X}$ whose gluing fibration $\GL{X}$ has a
-small separator {%pref 002H%}. A morphism of $E$-topoi $f:{X}\to{Y}$ is defined by a
+$E$* is defined to be a geometric universe $\Sh{X}$ equipped with an algebraic morphism $X:E\to\Sh{X}$ whose gluing fibration $\GL{X}$ has a
+small separator {%pref 002H%}. A morphism of $E$-topoi $f:{X}\to{Y}$ is defined by an algebraic
 morphism $\Sh{f}:\Sh{Y}\to\Sh{X}$ of geometric universes equipped with
 a 2-isomorphism $\varphi_{f}:X \cong Y;\Sh{f}$ in $[E,\Sh{X}]$.
 «
@@ -25,7 +24,7 @@ It will often be convenient to display pasting diagrams as *string diagrams*,
 which we read in diagrammatic order from top left to bottom right. A string
 diagram views 2-cell as a "transformer" through which information passes
 along a wire; the input/output interface of such a transformer is written on
-the wires. Regions of whitespace denote objects of the ambient 2-category.
+the wires. Regions of whitespace denote objects of the ambient 2-category. Our pasting diagram above is depicted as a string diagram in $\AlgGU$ below:
 «
 \begin{ZX}
 \zxN{} &\dar[close]{X}\\
