--- a/_nodes/0026.md
+++ b/_nodes/0026.md
@@ -2,4 +2,4 @@
 taxon: notation
 ---
 
-We will write $\TOP{E}$ for the meta-bicategory of $E$-topoi.
+We will write $\TOP{E}$ for the meta-2-category of $E$-topoi.
