--- a/_nodes/0032.md
+++ b/_nodes/0032.md
@@ -5,7 +5,7 @@ taxon: computation
 
 Let $X,Y,Z$ be topoi over a geometric universe $E$ and let $f:X\to Y$ and $g:Y\to Z$ be morphisms of topoi; we will construct the composite morphism $f;g:X\to Z$.
 
-First of all, let us unfold assumptions into the language of geometric universes. In particular, we have morphisms $\Sh{f}:\Sh{Y}\to \Sh{X}$ and $\Sh{g} : \Sh{Z}\to \Sh{Y}$, together with invertible 2-cells $\varphi_f,\varphi_g$ as depicted below:
+First of all, let us unfold assumptions into the language of $\AlgGU$. In particular, we have morphisms $\Sh{f}:\Sh{Y}\to \Sh{X}$ and $\Sh{g} : \Sh{Z}\to \Sh{Y}$, together with invertible 2-cells $\varphi_f,\varphi_g$ as depicted below:
 «
 \begin{ZX}
 \zxN{} &\dar[close]{X}\\
