--- a/_nodes/0031.md
+++ b/_nodes/0031.md
@@ -3,7 +3,7 @@ title: The identity morphism of a topos
 taxon: computation
 ---
 
-Let $X$ be a topos over a geometric universe $E$; we will compute the identity morphism $\Idn{X}:X\to X$ in $\TOP{E}$ as a diagram in the meta-2-category of geometric universes. We will let $\Sh{\Idn{X}} : \Sh{X}\to \Sh{X}$ be the identity map $\Idn{\Sh{X}}$. The coherence $\varphi\Sub{\Idn{X}}$ is given by the identity 2-cell, as we have the equation $X; \Sh{\Idn{X}} = X$ in $[E,\Sh{X}]$:
+Let $X$ be a topos over a geometric universe $E$; we will compute the identity morphism $\Idn{X}:X\to X$ in $\TOP{E}$ as a diagram in the meta-2-category $\AlgGU$ of geometric universes and algebraic morphisms. We will let $\Sh{\Idn{X}} : \Sh{X}\to \Sh{X}$ be the identity map $\Idn{\Sh{X}}$. The coherence $\varphi\Sub{\Idn{X}}$ is given by the identity 2-cell, as we have the equation $X; \Sh{\Idn{X}} = X$ in $[E,\Sh{X}]$:
 «
 \begin{ZX}
 \zxN{} &\dar[close]{X}\\
