--- a/_nodes/0035.md
+++ b/_nodes/0035.md
@@ -2,7 +2,7 @@
 title: Explicit computations in the 2-category of topoi
 ---
 
-In what follows, we will give explicit computations of the 2-categorical structure of $\TOP{E}$.
+In what follows, we will give explicit computations of the 2-categorical structure of $\TOP{E}$ in the language of $\AlgGU$.
 
 @include{0031}
 @include{0032}
