remark about finite colimits and logical morphisms

--- a/_nodes/0023.md
+++ b/_nodes/0023.md
@@ -4,10 +4,7 @@ title: Geometric universes
 
 @include{0022}
 
-Note that any geometric universe has finite colimits, which can be constructed using the subobject classifier.
 
 @include{0036}
-
-A logical morphism between geometric universes necessarily preserves finite colimits, as these can be constructed from the subobject classifier. Using Freyd's characterization of natural numbers objects in terms of a coequalization property, it follows that logical morphisms also preserve the natural numbers object.
-
+@include{0038}
 @include{0037}
