Beginning to work out the theory of fibered geometric universes

--- a/_bibliography/refs.bib
+++ b/_bibliography/refs.bib
@@ -113,3 +113,12 @@
   year = {1994},
   title = {Handbook of Categorical Algebra 2 -- Categories and Structures},
 }
+
+@misc{streicher:2017:fibered-top,
+  author = {Streicher, Thomas},
+  url = {https://www2.mathematik.tu-darmstadt.de/~streicher/FIBR/fibtop.pdf},
+  date = {2011-06},
+  note = {Unpublished manuscript},
+  title = {Observations on Fibered Toposes},
+}
+
