--- a/_nodes/0039.md
+++ b/_nodes/0039.md
@@ -7,3 +7,5 @@ Logical morphisms play an important role in the study of geometric universes; in
 @include{003A}
 @include{003B}
 @include{003C}
+@include{003D}
+@include{003E}
